# tests-for-c

./: README.md
core/init/: Android.mk  init.cpp
core/myclient/: Android.mk  main.cpp
core/myservice/: Android.mk  main.c
core/mysocket/: Android.mk  CMakeLists.txt  main.cpp
core/rootdir/: init.rc
core/websocket/: Android.mk  main.cpp
libjson/: Android.mk  path.txt
libuws/: Android.mk  path.txt
mysocket/: Android.mk  main.cpp  path.txt
socket/: README.md
socket/client/: CMakeLists.txt  main.c
socket/client-file/: CMakeLists.txt  client_test.txt  main.c
socket/client-multiply/: CMakeLists.txt  client.apk  client_file  main.c  socket.json
socket/server/: CMakeLists.txt  main.c
socket/server-file/: CMakeLists.txt  main.c  test.txt
socket/server-multiply/: CMakeLists.txt  client_file  main.c
websocket/Websocket-client/: .gitignore  CMakeCache.txt  CMakeLists.txt  Websocket_client  main.cpp  socket.json
websocket/Websocket-client2/: CMakeLists.txt  main.cpp
websocket/Websocket-server/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  WebSocket_server  WebSocket_server.cbp  Websocket_server  Websocket_server.cbp  cmake_install.cmake  main.cpp
websocket/Websocket-server-test/: .gitignore  CMakeCache.txt  CMakeLists.txt  WebSocket_server  WebSocket_server.cbp  socket.json
websocket/Websocket-server-test/tsd-websocket-mib3/1/workspace/: CMakeLists.txt
websocket/Websocket-server-test/tsd-websocket-mib3/1/workspace/tsd.websocket.mib3/app/tsd/websocket/mib3/: WebSocketServer.cpp
websocket/Websocket-server-test/tsd-websocket-mib3/1/workspace/tsd.websocket.mib3/src/tsd/websocket/mib3/: WebSocketTest.cpp  WebSocketTest.hpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/: checkout.sh  env  log.txt  script
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/: .reviewboardrc  CMakeLists.txt
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/audio/: CMakeLists.txt
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/audio/public/tsd/sds/android/app/: ClientManager.cpp  ClientManager.hpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/audio/public/tsd/sds/android/app/audio/: AudioConnection.hpp  AudioConnectionDescription.hpp  AudioFactory.hpp  AudioSource.hpp  FileSystemAudioOut.hpp  IAudioConnection.hpp  IAudioConnectionListener.hpp  IAudioFactory.hpp  IAudioSource.hpp  IAudioSourceListener.hpp  SyncAudioOut.hpp  WaveOut.hpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/audio/public/tsd/sds/android/app/audio/rsiapi/: ApiSwitch.hpp  IAudioConnectionsListener.hpp  ISourceControl.hpp  ISourceListener.hpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/audio/src/tsd/sds/android/app/audio/: AudioConnection.cpp  AudioFactory.cpp  AudioSource.cpp  FileSystemAudioOut.cpp  SyncAudioOut.cpp  WaveOut.cpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/audio/src/tsd/sds/android/app/audio/rsiapi/: RSISourceControl.cpp  RSISourceControl.hpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/common/: CMakeLists.txt
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/common/public/tsd/sds/android/app/: WorkerThreadPool.hpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/common/src/tsd/sds/android/app/: WorkerThreadPool.cpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/config/: CMakeLists.txt
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/config/public/tsd/sds/android/app/config/: AppConfiguration.hpp  AppConfigurationReader.hpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.audioclient.app.mib3/config/src/tsd/sds/android/app/config/: AppConfiguration.cpp  AppConfigurationReader.cpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.sds.android/: .reviewboardrc  CMakeLists.txt
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.sds.android.common/: .reviewboardrc  CMakeLists.txt
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.sds.android.common/public/tsd/sds/android/common/: NullCheck.hpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.sds.android.common/src/tsd/sds/android/common/: NullCheck.cpp
websocket/Websocket-server/tsd-audioclient-app-mib3/1/workspace/tsd.sds.android/public/tsd/sds/android/core/backend/playback/: IAudioOut.hpp
websocket/Websocket-server/tsd-websocket-mib3/1/workspace/tsd.websocket.mib3/: CMakeLists.txt
websocket/Websocket-server/tsd-websocket-mib3/1/workspace/tsd.websocket.mib3/app/: CMakeLists.txt
websocket/Websocket-server/tsd-websocket-mib3/1/workspace/tsd.websocket.mib3/app/tsd/websocket/mib3/: WebSocketServer.cpp
websocket/Websocket-server/tsd-websocket-mib3/1/workspace/tsd.websocket.mib3/src/tsd/websocket/mib3/: AudioHandler.cpp  AudioHandler.hpp  MediaHandler.cpp  MediaHandler.hpp  WebSocketTest.cpp  WebSocketTest.hpp
